examples/test/testpolicy13031.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13031
  namespace: namespace219
spec:
  podSelector:
    matchLabels:
      key26: value17
      key49: value37
      key23: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value15
          key4: value6
      podSelector:
        matchLabels:
          key24: value42
          key13: value36
